[gd_scene load_steps=10 format=3 uid="uid://c5iwca3n7cm5q"]

[ext_resource type="Shader" path="res://Shaders/damage_shd.gdshader" id="1_1b1l0"]
[ext_resource type="Texture2D" uid="uid://dgkm2nxoj02wf" path="res://Sprites/enemy_box.png" id="1_a1fyj"]
[ext_resource type="Script" path="res://Scripts/Enemy Scripts/enemy.gd" id="1_wrk8q"]
[ext_resource type="PackedScene" uid="uid://cays0m75lqdc2" path="res://Scenes/hit_box.tscn" id="4_askhj"]
[ext_resource type="AudioStream" uid="uid://c5qiwjlndccx4" path="res://Sound/Hit_Hurt2.wav" id="7_62hsw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k4fn4"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e0822"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uupyr"]
resource_local_to_scene = true
shader = ExtResource("1_1b1l0")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_47tb2"]
size = Vector2(32, 32)

[node name="enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_wrk8q")

[node name="HitBox" parent="." instance=ExtResource("4_askhj")]
collision_layer = 4
collision_mask = 1

[node name="Collision" parent="HitBox" index="0"]
shape = SubResource("RectangleShape2D_k4fn4")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e0822")

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_uupyr")
texture = ExtResource("1_a1fyj")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_47tb2")

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.06
one_shot = true

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_62hsw")
bus = &"SFX"

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]

[editable path="HitBox"]
